--- a/templates/rooms/search.html
+++ b/templates/rooms/search.html
@@ -68,9 +68,9 @@
             {% if instant %}checked{% endif %} />
         </div>
         <div>
-            <label for="super_host">By Superhost Only?</label>
-            <input type="checkbox" name="super_host" id="super_host" 
-            {% if super_host %}checked{% endif %} />
+            <label for="superhost">By Superhost Only?</label>
+            <input type="checkbox" name="superhost" id="superhost" 
+            {% if superhost %}checked{% endif %} />
         </div>
         
         <div>
@@ -115,5 +115,10 @@
         
         <button>Search</button>
     </form>
+
+    <h3>Results</h3>
+    {% for room in rooms %}
+        <h3>{{room.name}}</h3>
+    {% endfor %}
 
 {% endblock content %}
