--- a/templates/base.html
+++ b/templates/base.html
@@ -9,15 +9,20 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   </head>
 
-  <body>
+  <body class="text-gray-800 mt-24">
 
-    <header>
+    <header class="inset-0 container max-w-full flex items-center justify-between px-6 h-20 border-b border-gray-400 fixed bg-white">
+      <div class="flex items-center w-1/3">
+        <a href="{% url "core:home" %}" class="mr-6">
+          <img class="w-6" src="{% static 'img/logo.png' %}" />
+        </a>
+        {% block search-bar %}
+        <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
+          <input class="w-full search-box border px-5 py-3 font-medium text-gray-900 placeholder-gray-600 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search by City" />
+        </form>
+        {% endblock search-bar %}
+      </div>
       {% include "partials/nav.html" %}
-      {% block search-bar %}
-      <form method="get" action="{% url "rooms:search" %}">
-        <input name="city" placeholder="Search by City" />
-      </form>
-      {% endblock search-bar %}
     </header>
     {% block content %}{% endblock %}
 
