--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         </a>
         {% block search-bar %}
         <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
-          <input class="w-full search-box border px-5 py-3 font-medium text-gray-900 placeholder-gray-600 rounded-sm w-64 shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search by City" />
+          <input class="w-full search-box border px-5 py-3 font-medium text-gray-900 placeholder-gray-600 rounded-sm shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search by City" />
         </form>
         {% endblock search-bar %}
       </div>
