--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -15,30 +15,58 @@ Sign Up
 
         <form  method="POST" action={% url "users:signup" %}>
             {% csrf_token %}
-            {{form.first_name}}
-            {{form.last_name}}
-            {{form.email}}
 
             
-            {% if form.errors %}
-
-                {% for e in form.errors %}
-                    {{e}}
-                {% endfor %}
-                    
+            {% if non_filed_errors %}
+                {% for error in form.non_filed_errors %}
+                    {{error}}
+                {% endfor %}  
             {% endif %}
 
-            
-            {% if form.email.errors %}
-                
-                {% for e in form.email.errors %}
-                    {{e}}
-                {% endfor %}
-                    
-            {% endif %}
-            
-            {{form.password}}
-            {{form.password1}}
+            <div class="input">
+                {{form.first_name}}
+                {% if form.first_name.errors %}
+                    {% for error in form.first_name.errors %}
+                        {{error}}
+                    {% endfor %}  
+                {% endif %}
+            </div>
+
+            <div class="input">
+                {{form.last_name}}
+                {% if form.last_name.errors %}
+                    {% for error in form.last_name.errors %}
+                        {{error}}
+                    {% endfor %}  
+                {% endif %}
+            </div>
+
+            <div class="input">
+                {{form.email}}
+                {% if form.email.errors %}
+                    {% for error in form.email.errors %}
+                        <span class="text-red-700 font-medium text-sm">{{error}}</span>
+                    {% endfor %}  
+                {% endif %}
+            </div>
+
+            <div class="input">
+                {{form.password}}
+                {% if form.password.errors %}
+                    {% for error in form.password.errors %}
+                        {{error}}
+                    {% endfor %}  
+                {% endif %}
+            </div>
+
+            <div class="input">
+                {{form.password1}}
+                {% if form.password1.errors %}
+                    {% for error in form.password1.errors %}
+                        {{error}}
+                    {% endfor %}  
+                {% endif %}
+            </div>
             <button class="btn bg-red-500 text-white">Sign Up</button>
         </form>
 
