--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -29,6 +29,14 @@ input {
 form {
   .input {
     @apply mb-3;
+    &.has_error {
+      input {
+        @apply bg-red-200 border-gray-400;
+        &:focus {
+          @apply border-gray-600;
+        }
+      }
+    }
   }
 }
 
