--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -13,62 +13,7 @@ Sign Up
     <div class="container lg:w-5/12 md:w-1/2 xl:w-1/4 mx-auto my-10 flex flex-col items-center border p-6 border-gray-400">
         {% include 'partials/social_login.html' %}
 
-        <form  method="POST" action={% url "users:signup" %}>
-            {% csrf_token %}
-
-            
-            {% if non_filed_errors %}
-                {% for error in form.non_filed_errors %}
-                    {{error}}
-                {% endfor %}  
-            {% endif %}
-
-            <div class="input">
-                {{form.first_name}}
-                {% if form.first_name.errors %}
-                    {% for error in form.first_name.errors %}
-                        {{error}}
-                    {% endfor %}  
-                {% endif %}
-            </div>
-
-            <div class="input">
-                {{form.last_name}}
-                {% if form.last_name.errors %}
-                    {% for error in form.last_name.errors %}
-                        {{error}}
-                    {% endfor %}  
-                {% endif %}
-            </div>
-
-            <div class="input">
-                {{form.email}}
-                {% if form.email.errors %}
-                    {% for error in form.email.errors %}
-                        <span class="text-red-700 font-medium text-sm">{{error}}</span>
-                    {% endfor %}  
-                {% endif %}
-            </div>
-
-            <div class="input">
-                {{form.password}}
-                {% if form.password.errors %}
-                    {% for error in form.password.errors %}
-                        {{error}}
-                    {% endfor %}  
-                {% endif %}
-            </div>
-
-            <div class="input">
-                {{form.password1}}
-                {% if form.password1.errors %}
-                    {% for error in form.password1.errors %}
-                        {{error}}
-                    {% endfor %}  
-                {% endif %}
-            </div>
-            <button class="btn bg-red-500 text-white">Sign Up</button>
-        </form>
+        {% include 'mixins/auth/auth_form.html' with form=form cta="Sign up" %}
 
         <div class="mt-5">
             <span class="mr-2">Have an account?</span>
