--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -19,7 +19,7 @@
   @apply text-center rounded-sm py-5 font-light text-lg w-full;
 }
 
-input {
+.form-input {
   @apply rounded-sm py-5 font-light text-lg w-full text-left border border-gray-600 px-5;
   &:focus {
     @apply outline-none border-teal-500;
@@ -31,7 +31,7 @@ form {
     @apply mb-3;
     &.has_error {
       input {
-        @apply bg-red-200 border-gray-400;
+        @apply bg-red-200 border-gray-600;
         &:focus {
           @apply border-gray-600;
         }
