--- a/templates/users/update-profile.html
+++ b/templates/users/update-profile.html
@@ -14,8 +14,10 @@
     
         {% include 'mixins/auth/auth_form.html' with form=form cta="Update profile" %}
 
+        {% if object.login_method == "email" %}
         <div class="mt-5">
-            <a href="{% url 'users:signup' %}" class="text-teal-500 font-medium">Change Password</a>
+            <a href="{% url 'users:password' %}" class="text-teal-500 font-medium">Change password</a>
         </div>
+        {% endif %}
     </div>
 {% endblock content %}
