--- a/templates/rooms/room_detail.html
+++ b/templates/rooms/room_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load is_booked %}
 
 {% block page_title %}
     {{room.name}}
@@ -98,7 +99,7 @@
     <div class="w-1/3">
         {% if room.host == user %}
         <a href="{% url 'rooms:edit' room.pk %}" class="btn-link block">Edit Room</a>
-        {% else %}       
+        {% else %}
             {% if not request.session.is_hosting %} 
                 {% for calendar in room.get_calendars %}
                 <div class="mb-20">
@@ -109,10 +110,13 @@
                         {% endfor %}
                     </div>
                     <div class="cal-grid">
-                        {% for day in calendar.get_days %}                          
+                        {% for day in calendar.get_days %}
+                            {% is_booked room day as is_booked_bool %}                          
                             {% if day.number != 0 %}                            
                                 {% if day.past %}
                                     <span class="rounded bg-gray-200 w-full text-center p-1 text-gray-300">{{day}} </span>
+                                {% elif is_booked_bool %}
+                                    <span class="rounded bg-gray-200 w-full text-center p-1 text-gray-300 line-through">{{day}}</span>
                                 {% else %}
                                     <span class="bg-gray-200 w-full text-center rounded text-gray-700 p-1 hover:font-medium hover:bg-teal-400 hover:text-white cursor-pointer">{{day}} </span>
                                 {% endif %}            
