--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static i18n %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +19,11 @@
         </a>
         {% block search-bar %}
         <form method="get" action="{% url "rooms:search" %}" class="w-9/12">
-          <input class="w-full search-box border px-5 py-3 font-medium text-gray-900 placeholder-gray-600 rounded-sm shadow-md hover:shadow-lg focus:outline-none" name="city" placeholder="Search by City" />
+          <input 
+            class="w-full search-box border px-5 py-3 font-medium text-gray-900 placeholder-gray-600 rounded-sm shadow-md hover:shadow-lg focus:outline-none" 
+            name="city" 
+            placeholder="{% trans "Search by City" %}" 
+          />
         </form>
         {% endblock search-bar %}
       </div>
@@ -28,6 +32,15 @@
     {% block content %}{% endblock %}
 
     {% include "partials/footer.html" %}
+
+    <script>
+      const langSelect = document.getElementById("js-lang");
+      const handleLangChange = () => {
+        const selected = langSelect.value;
+        fetch(`{% url 'users:switch-language' %}?lang=${selected}`).then(() => window.location.reload());
+      }
+      langSelect.addEventListener("change", handleLangChange);
+    </script>
   </body>
 
 </html>
